# whispercpp

./: .gitignore  BUILD.bazel  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/actions/setup-repo/: action.yml
.github/workflows/: ci.yml  submodule-update.yml  wheels.yml
examples/: BUILD
examples/basic/: transcribe_file.py
examples/bentoml/: requirements.txt
examples/stream/: stream.py
requirements/: pypi.txt
requirements/release/: requirements.txt  requirements_darwin.txt  requirements_windows.txt
rules/: deps.bzl
src/whispercpp/: BUILD  __init__.py  api.pyi  api_cpp2py_export.cc  api_cpp2py_export.h  audio.cc  audio.h  context.cc  context.h  params.cc  utils.py
tests/: BUILD  export_test.py
